test_yuriiq/catalog/language/german/account/edit.php
<?php

// text
$_['text_account']	= 'Konto';
$_['text_edit']	= 'Informationen bearbeiten';
$_['text_your_details']	= 'Persönliche Angaben';
$_['text_success']	= 'Das Konto wurde geändert.';

// error
$_['error_telephone']	= 'Telefon muss zwischen 3 und 32 Zeichen lang sein!';
$_['error_lastname']	= 'Nachname muss zwischen 1 und 32 Zeichen lang sein!';
$_['error_exists']	= 'Diese Emailadresse ist bereits registriert!';
$_['error_firstname']	= 'Vorname muss zwischen 1 und 32 Zeichen lang sein!';
$_['error_email']	= 'Emailadresse ist nicht gültig!';

// entry
$_['entry_firstname']	= 'Vorname:';
$_['entry_fax']	= 'Fax:';
$_['entry_lastname']	= 'Nachname:';
$_['entry_email']	= 'Email:';
$_['entry_telephone']	= 'Telefon:';

// heading
$_['heading_title']	= 'Meine Kontoinformationen';
?>